<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/grey_80" />

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/bt_expand"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/grey_60"
            app:srcCompat="@drawable/ic_expand_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_3"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_marginTop="16sp"
            android:layout_marginStart="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/composition"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_600"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/composition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp" />

        <View
            android:layout_marginTop="4sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:layout_marginTop="16sp"
            android:layout_marginStart="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indications"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_600"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/indications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp" />

        <View
            android:layout_marginTop="4sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:layout_marginTop="16sp"
            android:layout_marginStart="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosing"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_600"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/dosing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp" />

        <View
            android:layout_marginTop="4sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:layout_marginTop="16sp"
            android:layout_marginStart="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sideEffects"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/blue_grey_600"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/sideEffects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp" />

        <View
            android:layout_marginBottom="8sp"
            android:layout_marginTop="4sp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


    </LinearLayout>

</LinearLayout>